Twitter client with Fragments

--- a/LoginActivity/res/layout/fragment_profile.xml
+++ b/LoginActivity/res/layout/fragment_profile.xml
@@ -6,17 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HomeFeedActivity" >
+    tools:context="com.androidlearning.twitter.ProfileActivity$PlaceholderFragment" >
 
-    <FrameLayout
-        android:id="@+id/flContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
-
-    </FrameLayout>
 
 </RelativeLayout>
