--- a/LoginActivity/res/menu/home_feed.xml
+++ b/LoginActivity/res/menu/home_feed.xml
@@ -4,6 +4,14 @@
         android:id="@+id/action_compose"
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_compose"
         android:title="@string/action_compose"/>
+    
+        <item
+        android:id="@+id/action_profile"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/action_profile"/>
 
 </menu>
